--- a/projects/advance_actions/views/advance_action.xml
+++ b/projects/advance_actions/views/advance_action.xml
@@ -27,6 +27,7 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
+                     <field name="designation" optional="hide"/>
                     <field name="state" widget="statusbar" options="{'clickable':'True'}"/>
                 </tree>
             </field>
