[IMP]created server action in invoicing,created function to create bill of vendor.

--- a/projects/exam_2/wizards/exam_wizard.xml
+++ b/projects/exam_2/wizards/exam_wizard.xml
@@ -37,6 +37,7 @@
             "view_mode": "form",
             "res_model": "exam.wizard",
             "target": "new",
+            "context":{'active_ids':records.ids}
             }
         </field>
     </record>
