--- a/projects/client_project/views/account_move_line.xml
+++ b/projects/client_project/views/account_move_line.xml
@@ -4,24 +4,18 @@
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
-            <!--            <xpath expr="//field[@name='product_id']" position="after">-->
-            <!--                <field name="delivery_address_id" optional="hide"/>-->
-            <!--                <field name="vendor_id" optional="hide"/>-->
-            <!--                <field name="vendor_price" optional="hide"/>-->
-            <!--                <field name="planned_gp" optional="hide"/>-->
-            <!--                <field name="description" optional="hide"/>-->
-            <!--            </xpath>-->
 
             <xpath expr="//field [@name='invoice_line_ids']/tree / field [@ name = 'tax_ids']" position="after">
-                <field name="delivery_address_id" optional="hide"/>
-                <field name="vendor_id" optional="hide"/>
-                <field name="vendor_price" optional="hide"/>
+                <field name="vendor_id" optional="hide" attrs="{'column_invisible':[('parent.move_type','!=','out_invoice')]}"/>
+                <field name="delivery_address_id" optional="hide"  domain="[('parent_id', '=', vendor_id)]"/>
+                <field name="vendor_price" optional="hide" attrs="{'column_invisible':[('parent.move_type','!=','out_invoice')]}"/>
                 <field name="planned_gp" optional="hide"/>
                 <field name="description" optional="hide"/>
             </xpath>
             <xpath expr="//field [@name = 'line_ids'] / tree / field [@ name = 'tax_ids']" position="after">
                 <field name="delivery_address_id" optional="hide"/>
-                <field name="vendor_id" optional="hide"/>
+                <field name="vendor_id" optional="hide"
+                            />
                 <field name="vendor_price" optional="hide"/>
                 <field name="planned_gp" optional="hide"/>
                 <field name="description" optional="hide"/>
@@ -31,7 +25,6 @@
 
     <record id="subscription_bill" model="ir.actions.server">
         <field name="name">Generate Subscription Bill</field>
-        <!--        <field name="type">ir.actions.server</field>-->
         <field name="model_id" ref="model_account_move"/>
         <field name="binding_model_id" ref="model_account_move"/>
         <field name="binding_view_types">list,form</field>
