--- a/projects/smart_view/views/smart.xml
+++ b/projects/smart_view/views/smart.xml
@@ -1,44 +1,44 @@
 <odoo>
-<!--    <record model="ir.ui.view" id="smart_view_tree">-->
-<!--        <field name="name">smart view</field>-->
-<!--        <field name="model">smart.view</field>-->
-<!--        <field name="arch" type="xml">-->
-<!--            <tree>-->
-<!--                <field name="create_uid" string="created by"/>-->
-<!--                <field name="write_uid" string="updated by"/>-->
-<!--                <field name="name_id"/>-->
-<!--                <field name="mobile_id"/>-->
-<!--            </tree>-->
-<!--        </field>-->
-<!--    </record>-->
+    <record model="ir.ui.view" id="smart_view_tree">
+        <field name="name">smart view</field>
+        <field name="model">smart.view</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="create_uid" string="created by"/>
+                <field name="write_uid" string="updated by"/>
+                <field name="name_id"/>
+                <field name="mobile_id"/>
+            </tree>
+        </field>
+    </record>
 
 
-    <record model="ir.ui.view" id="smart_view_form">
+    <record model="ir.ui.view" id="smart_view_form_new">
         <field name="name">smart view</field>
         <field name="model">smart.view</field>
         <field name="arch" type="xml">
             <form>
-<!--                <header>-->
-<!--                    <button type="object" name="test" string="new" class="btn-info"/>-->
-<!--                </header>-->
-<!--                <header>-->
-<!--                    <button type="object" name="create_one2many_record" string="one2many create" class="btn-info"/>-->
-<!--                </header>-->
+                <header>
+                    <button type="object" name="test" string="new" class="btn-info"/>
+                </header>
+                <header>
+                    <button type="object" name="create_one2many_record" string="one2many create" class="btn-info"/>
+                </header>
                 <sheet>
-<!--                    <div class="oe_button_box" name="button_box">-->
-<!--                        <button name="%(smart_view_action)d" type="action"-->
-<!--                                class="oe_stat_button" icon="fa-calendar" string="CALENDER">-->
+                    <div class="oe_button_box" name="button_box">
+                        <button name="%(smart_view_action)d" type="action"
+                                class="oe_stat_button" icon="fa-calendar" string="CALENDER">
 
-<!--                        </button>-->
-<!--                        <button name="%(smart_view_action)d" type="action"-->
-<!--                                class="oe_stat_button" icon="fa-user" string="USER">-->
+                        </button>
+                        <button name="%(smart_view_action)d" type="action"
+                                class="oe_stat_button" icon="fa-user" string="USER">
 
-<!--                        </button>-->
-<!--                        <button name="%(smart_view_action)d" type="action"-->
-<!--                                class="oe_stat_button" icon="fa-building" string="Building">-->
+                        </button>
+                        <button name="%(smart_view_action)d" type="action"
+                                class="oe_stat_button" icon="fa-building" string="Building">
 
-<!--                        </button>-->
-<!--                    </div>-->
+                        </button>
+                    </div>
                     <group>
 
                         <field name="write_uid" string="modified by"/>
@@ -47,58 +47,58 @@
                         <field name="mobile_id" widget="phone"/>
                         <field name="quantity_id" readonly="1"/>
                         <field name="date_id"/>
-<!--                        <notebook>-->
-<!--                            <page string="PAGE-2">-->
-<!--                                <field name="new_field">-->
-<!--                                    <tree editable="top">-->
-<!--                                        <field name="new_name"/>-->
-<!--                                        <field name="product_id"/>-->
-<!--                                        <field name="test_id"/>-->
-<!--                                    </tree>-->
+                        <notebook>
+                            <page string="PAGE-2">
+                                <field name="new_field">
+                                    <tree editable="top">
+                                        <field name="new_name"/>
+                                        <field name="product_id"/>
+                                        <field name="test_id"/>
+                                    </tree>
 
-<!--                                </field>-->
-<!--                            </page>-->
-<!--                            <page string="PAGE-1">-->
-<!--                                <field name="new_field">-->
-<!--                                    <tree editable="bottom">-->
-<!--                                        <field name="new_name"/>-->
-<!--                                        <field name="product_id"/>-->
-<!--                                        <field name="test_id"/>-->
-<!--                                    </tree>-->
+                                </field>
+                            </page>
+                            <page string="PAGE-1">
+                                <field name="new_field">
+                                    <tree editable="bottom">
+                                        <field name="new_name"/>
+                                        <field name="product_id"/>
+                                        <field name="test_id"/>
+                                    </tree>
 
-<!--                                </field>-->
-<!--                            </page>-->
-<!--                        </notebook>-->
+                                </field>
+                            </page>
+                        </notebook>
                     </group>
                 </sheet>
-<!--                <div class="oe_chatter">-->
-<!--                    <field name="message_follower_ids"/>-->
-<!--                    <field name="activity_ids"/>-->
-<!--                    <field name="message_ids"/>-->
-<!--                </div>-->
+                <div class="oe_chatter">
+                    <field name="message_follower_ids"/>
+                    <field name="activity_ids"/>
+                    <field name="message_ids"/>
+                </div>
             </form>
         </field>
     </record>
 
-<!--    <record model="ir.ui.view" id="smart_view_search">-->
-<!--        <field name="name">smart view</field>-->
-<!--        <field name="model">smart.view</field>-->
-<!--        <field name="arch" type="xml">-->
-<!--            <search string="search">-->
+    <record model="ir.ui.view" id="smart_view_search">
+        <field name="name">smart view</field>
+        <field name="model">smart.view</field>
+        <field name="arch" type="xml">
+            <search string="search">
 
-<!--            <field name="name_id"/>-->
-<!--            <field name="mobile_id"/>-->
-<!--            </search>-->
-<!--        </field>-->
+            <field name="name_id"/>
+            <field name="mobile_id"/>
+            </search>
+        </field>
 
-<!--    </record>-->
+    </record>
 
 
-<!--    <record model="ir.actions.act_window" id="smart_view_action_id">-->
-<!--        <field name="name">view</field>-->
-<!--        <field name="res_model">smart.view</field>-->
-<!--        <field name="view_mode">tree,form,kanban</field>-->
-<!--    </record>-->
+    <record model="ir.actions.act_window" id="smart_view_action_id">
+        <field name="name">view</field>
+        <field name="res_model">smart.view</field>
+        <field name="view_mode">tree,form,kanban</field>
+    </record>
 
       <record model="ir.actions.act_window" id="new_smart_view_action_id">
         <field name="name">view</field>
@@ -112,8 +112,8 @@
     <menuitem name="Branch" id="branch_id" parent="smart_view_id" action="new_smart_view_action_id"/>
 
 
-<!--    <menuitem name="IT" id="it_id" parent="branch_id"-->
-<!--              action="smart_view_action"/>-->
+    <menuitem name="IT" id="it_id" parent="branch_id"
+              action="smart_view_action"/>
 
 
 </odoo>
