--- a/projects/bulk_products/views/bulk.xml
+++ b/projects/bulk_products/views/bulk.xml
@@ -13,17 +13,29 @@
             </field>
         </record>
 
-         <record model="ir.ui.view" id="bulk_products_form">
+        <record model="ir.ui.view" id="bulk_products_form">
             <field name="name">bulk products form</field>
             <field name="model">bulk.products</field>
             <field name="arch" type="xml">
                 <form>
                     <group>
-                    <field name="name"/>
-                    <field name="email"/>
-                    <field name="master_product_id"/>
-                    <field name="user_id"/>
-                    <field name="bulk_products"/>
+                        <group>
+                            <field name="name"/>
+                            <field name="email"/>
+                        </group>
+                        <group>
+                            <field name="master_product_id"/>
+                            <field name="user_id"/>
+                        </group>
+                        <group>
+                            <field name="bulk_products_ids">
+                                <tree editable="bottom">
+                                    <field name="product_id"/>
+                                    <field name="description"/>
+                                    <field name="quantity"/>
+                                </tree>
+                            </field>
+                        </group>
                     </group>
                 </form>
             </field>
