--- a/projects/bulk_products/views/sale_order.xml
+++ b/projects/bulk_products/views/sale_order.xml
@@ -1,16 +1,17 @@
 <odoo>
     <data>
 
-<!--        <record model="ir.actions.act_window" id="bulk_action_window">-->
-<!--            <field name="name">sale menu</field>-->
-<!--            <field name="res_model">sale.order</field>-->
-<!--            <field name="view_mode">tree,form</field>-->
-<!--        </record>-->
+        <record model="ir.ui.view" id="sale_order_inherited_id">
+            <field name="name">sale order inherited</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_order_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='payment_term_id']" position="after">
+                    <field name="bulk_product_template"/>
+                </xpath>
+            </field>
+        </record>
 
         <menuitem name="Bulk Products" id="bulkproduct_id" action="bulk_action_window" parent="sale.sale_order_menu"/>
-
-        <!--        <menuitem name="advance_action" id="advance_action_id" parent="aa_id"/>-->
-        <!--        <menuitem name="advance" id="advance_id" parent="advance_action_id" action="advance_action_action_window"/>-->
-
     </data>
 </odoo>
