[IMP]created controller for showing particular records in contracts, created submit controller, created function for uploading files from website to backend module, created templates for displaying list view and detailed view

--- a/projects/advance_actions/views/website_form.xml
+++ b/projects/advance_actions/views/website_form.xml
@@ -12,7 +12,8 @@
                  style="background-image: url(advance_actions/static/src/css/img.jpeg); background-repeat: no-repeat; background-size: cover;">
                 <div class="container">
                     <h1 class="center">Form</h1>
-                    <form role="form" action="/advance/submit" method="POST" class="css_text css_focus"
+                    <form role="form"
+                          class="css_text css_focus"
                           autocomplete="off">
                         <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
                         <div>
