--- a/projects/bulk_products/views/bulk.xml
+++ b/projects/bulk_products/views/bulk.xml
@@ -1,12 +1,11 @@
 <odoo>
     <data>
-
-
         <record model="ir.ui.view" id="bulk_products_tree">
             <field name="name">bulk products list</field>
             <field name="model">bulk.products</field>
             <field name="arch" type="xml">
                 <tree>
+                    <field name="bulk_sequence"/>
                     <field name="name"/>
                     <field name="email"/>
                 </tree>
@@ -18,6 +17,9 @@
             <field name="model">bulk.products</field>
             <field name="arch" type="xml">
                 <form>
+                    <h1>
+                        <field name="bulk_sequence" nolabel="1"/>
+                    </h1>
                     <group>
                         <group>
                             <field name="name"/>
@@ -41,13 +43,33 @@
             </field>
         </record>
 
+        <record id="bulk_products_search" model="ir.ui.view">
+            <field name="name">bulk products search</field>
+            <field name="model">bulk.products</field>
+            <field name="arch" type="xml">
+                <search>
+                    <field name="name"/>
+                    <field name="email"/>
+                    <filter string="name" name="name" context="{'group_by':'name'}"/>
+                    <filter string="email" name="email" context="{'group_by':'email'}"/>
+                    <filter string="names with j " name="name" domain="[('name','ilike', 'j')]"/>
+                </search>
+            </field>
+        </record>
+
         <record model="ir.actions.act_window" id="bulk_action_window">
             <field name="name">bulk</field>
             <field name="res_model">bulk.products</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">tree,form,search</field>
         </record>
-        <!--        <menuitem name="advance_action" id="advance_action_id" parent="aa_id"/>-->
-        <!--        <menuitem name="advance" id="advance_id" parent="advance_action_id" action="advance_action_action_window"/>-->
+
+        <record model="ir.sequence" id="bulk_unique_id">
+            <field name="name">Unique Id</field>
+            <field name="code">bulk.products</field>
+            <field name="prefix">B-</field>
+            <field name="number_increment" eval="1"/>
+        </record>
+
 
     </data>
 </odoo>
