--- a/projects/exam_2/views/exam.xml
+++ b/projects/exam_2/views/exam.xml
@@ -9,6 +9,18 @@
         </field>
     </record>
 
+    <record model="ir.ui.view" id="question_exam_tree">
+        <field name="name">exam</field>
+        <field name="model">exam</field>
+        <field name="priority">20</field>
+        <field name="arch" type="xml">
+            <tree create="false">
+                <field name="name"/>
+                <field name="age"/>
+            </tree>
+        </field>
+    </record>
+
     <record model="ir.ui.view" id="exam_form">
         <field name="name">exam</field>
         <field name="model">exam</field>
@@ -20,27 +32,32 @@
             </form>
         </field>
     </record>
-    
+
     <record model="ir.actions.act_window" id="exam_action">
         <field name="name">exam view</field>
         <field name="res_model">exam</field>
         <field name="view_mode">tree,form</field>
-<!--        <field name="domain">-->
-<!--            [('name','=','kavish')]-->
-<!--        </field>-->
+    </record>
+
+    <record model="ir.actions.act_window" id="new_exam_action">
+        <field name="name">new exam view</field>
+        <field name="res_model">exam</field>
+        <field name="view_mode">tree</field>
+        <field name="view_id" ref="question_exam_tree"/>
     </record>
 
 
     <menuitem name="EXAM" id="exam_menu" action="exam_action"/>
 
-<!--    <menuitem name="Rental Management" id="submenu1_id" parent="rental_management_id"/>-->
+    <menuitem name="Question Papers" id="que_paper" action="exam_action" parent="exam_menu"/>
 
-    <!--    <menuitem name="Rental Type" id="submenu2_id" parent="rental_management_id"/>-->
+    <menuitem name="paper 1" id="paper1" parent="que_paper"
+              action="new_exam_action" groups="exam_2.group_question_paper_id"/>
 
 
-<!--    <menuitem name="Rental" id="rental_id" parent="submenu1_id"-->
-<!--              action="rental_action"/>-->
-<!--    <menuitem name="Rental Type" id="rental_menu_id" parent="submenu1_id"-->
-<!--              action="rental_type_action"/>-->
+    <!--    <menuitem name="Rental" id="rental_id" parent="submenu1_id"-->
+    <!--              action="rental_action"/>-->
+    <!--    <menuitem name="Rental Type" id="rental_menu_id" parent="submenu1_id"-->
+    <!--              action="rental_type_action"/>-->
 
 </odoo>
