--- a/projects/rental_management/reports/report_1.xml
+++ b/projects/rental_management/reports/report_1.xml
@@ -45,7 +45,7 @@
 <!--                    </t>-->
 <!--                </t>-->
 <!--            </t>-->
-<!--        </template>-->
+<!--        </template>
 
     </data>
 </odoo>
