--- a/projects/college_management/views/college_management.xml
+++ b/projects/college_management/views/college_management.xml
@@ -58,9 +58,9 @@
 <!--                <header>-->
 <!--                    <field name="state_id" widget="statusbar" options="{'clickable': '1'}"/>-->
 <!--                </header>-->
-<!--                <div class="oe_button_box" name="button_box"/>-->
-<!--                <button class="oe_stat_button" name="%(college_management_action_window)d"-->
-<!--                        type="action" icon="fa-star">-->
+                <div class="oe_button_box" name="button_box"/>
+                <button class="oe_stat_button" name="%(college_management_action_window)d"
+                        type="action" icon="fa-star">
 
 <!--                </button>-->
 <!--                <sheet>-->
